correct entities, requests, dtos and tables